force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__CallReportCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CallReportCode__c</fullName>
    <description>This field is used in the jXchange integration.</description>
    <label>Call Report Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1A1</fullName>
                <label>1A1 - Residential Construction</label>
            </value>
            <value>
                <fullName>1A2</fullName>
                <label>1A2 - Other Construction, All Land Development &amp; Other Land Loans</label>
            </value>
            <value>
                <fullName>1B</fullName>
                <label>1B - Secured by farm land</label>
            </value>
            <value>
                <fullName>1C1</fullName>
                <label>1C1 - Secured by 1-4 family residential prop. - revolving loan</label>
            </value>
            <value>
                <fullName>1C2A</fullName>
                <label>1C2A - Secured by 1-4 family residential prop. - first lien</label>
            </value>
            <value>
                <fullName>1C2B</fullName>
                <label>1C2B - Secured by 1-4 family residential prop. - junior lien</label>
            </value>
            <value>
                <fullName>1D</fullName>
                <label>1D - Secured by multifamily residential properties</label>
            </value>
            <value>
                <fullName>1E1</fullName>
                <label>1E1 - Owner-Occupied Nonfarm/Nonresidential Properties</label>
            </value>
            <value>
                <fullName>1E2</fullName>
                <label>1E2 - Nonowner-Occupied Nonfarm/Nonresidential Properties</label>
            </value>
            <value>
                <fullName>2A</fullName>
                <label>2A - Loans to commercial banks in the U.S.</label>
            </value>
            <value>
                <fullName>2A1</fullName>
                <label>2A1 - Loans to U.S. branches and agencies of foreign banks</label>
            </value>
            <value>
                <fullName>2B</fullName>
                <label>2B - Loans to other depository institutions in the U.S.</label>
            </value>
            <value>
                <fullName>2C1</fullName>
                <label>2C1 - Loans to foreign branches of other U.S. banks</label>
            </value>
            <value>
                <fullName>2C2</fullName>
                <label>2C2 - Loans to other banks in foreign countries</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Loans to finance agricultural prod. &amp; other loans to farmers</label>
            </value>
            <value>
                <fullName>4A</fullName>
                <label>4A - Commercial &amp; industrial loans - U.S. addresses</label>
            </value>
            <value>
                <fullName>4B</fullName>
                <label>4B - Commercial &amp; industrial loans - Non-U.S. addresses</label>
            </value>
            <value>
                <fullName>5A</fullName>
                <label>5A - Acceptances of U.S. banks</label>
            </value>
            <value>
                <fullName>5B</fullName>
                <label>5B - Acceptances of foreign banks</label>
            </value>
            <value>
                <fullName>6A</fullName>
                <label>6A - Consumer - Credit cards and related plans</label>
            </value>
            <value>
                <fullName>6B</fullName>
                <label>6B - Other Revolving Consumer Credit Plans</label>
            </value>
            <value>
                <fullName>6C</fullName>
                <label>6C - Auto Consumer Loans</label>
            </value>
            <value>
                <fullName>6D</fullName>
                <label>6D - Other Consumer Loans</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - Loans to foreign governments and official institutions</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Obligations of states and political subdivisions in the U.S.</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>99 - Conversion</label>
            </value>
            <value>
                <fullName>9B1</fullName>
                <label>9B1 - Loans for purchasing or carrying securities</label>
            </value>
            <value>
                <fullName>9B2</fullName>
                <label>9B2 - All Other Loans</label>
            </value>
            <value>
                <fullName>10A</fullName>
                <label>10A - Leases to Individuals for Household, Family &amp; Other Pers Exp</label>
            </value>
            <value>
                <fullName>10B</fullName>
                <label>10B - All Other Leases</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>