force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__CoreBookingDetails__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CoreBookingDetails__c</fullName>
    <label>Core Booking Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>