force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__CoreProductCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CoreProductCode__c</fullName>
    <label>jXchange Product Code (Core Loan Type)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>