force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__DrAcctExpDt__c.field-meta.xml
<CustomField>
    <fullName>JHJX__DrAcctExpDt__c</fullName>
    <description>Users populate this optional date field to define the debit account hold expiration date. By default, it is blank.</description>
    <label>Debit Account Hold Expiration Date</label>
    <type>Date</type>
</CustomField>