force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__DrAcctHldDt__c.field-meta.xml
<CustomField>
    <fullName>JHJX__DrAcctHldDt__c</fullName>
    <description>Users populate this optional date field to define the debit account hold date. By default, it is blank.</description>
    <label>Debit Account Hold Date</label>
    <type>Date</type>
</CustomField>