force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__HldAcctId__c.field-meta.xml
<CustomField>
    <fullName>JHJX__HldAcctId__c</fullName>
    <description>Users populate this optional number field with the hold account Deposit or CD number. By default, it is blank.</description>
    <label>Hold Account Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>