force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__HldAcctType__c.field-meta.xml
<CustomField>
    <fullName>JHJX__HldAcctType__c</fullName>
    <description>Users populate this optional field with the hold account type. By default, it is blank.</description>
    <label>Hold Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>