force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__LOCCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__LOCCode__c</fullName>
    <description>The code that defines the type of line of credit.</description>
    <label>Line of Credit Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Revolving Line of Credit</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Straight Line of Credit</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Letter of Credit</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Performance Letter of Credit</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Financial Letter of Credit</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Commercial Letter of Credit</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - Commitment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>