force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__LOCGdnceBorwAck__c.field-meta.xml
<CustomField>
    <fullName>JHJX__LOCGdnceBorwAck__c</fullName>
    <description>Answers the question: Has the line of credit borrower acknowledge the guidance?</description>
    <label>Line of Credit Borrower Ack Guidance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>false</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>true</fullName>
                <label>True</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>