force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__LOCPrtcpCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__LOCPrtcpCode__c</fullName>
    <description>The code that defines the line of credits participation activity.</description>
    <label>Line of Credit Participation Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Participated</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Sold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>