force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__SalesPerson__c.field-meta.xml
<CustomField>
    <fullName>JHJX__SalesPerson__c</fullName>
    <description>The Users populate this optional picklist field that represents the sales person. By default, it is blank.</description>
    <label>Sales Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JHJX__SalesPerson</valueSetName>
    </valueSet>
</CustomField>