force-app/main/default/objects/LLC_BI__Loan__c/fields/Last_Approver_for_Memo__c.field-meta.xml
<CustomField>
    <fullName>Last_Approver_for_Memo__c</fullName>
    <description>Captures the Last Approver as a loan goes through an approval process.  Will be used for Change Memos in order for change memos to follow company approval policies</description>
    <label>Last Approver for Memo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Senior Lender</fullName>
            </value>
            <value>
                <fullName>CLC</fullName>
            </value>
            <value>
                <fullName>RDLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>