force-app/main/default/objects/LLC_BI__Loan__c/fields/Lead_Referral_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lead_Referral_Comments__c</fullName>
    <description>Zenn</description>
    <label>Lead/Referral Comments</label>
    <type>TextArea</type>
</CustomField>