force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount__c</fullName>
    <description>This field is required. It is manually populated. It contains the full original amount of the Loan; this is the amount of the Loan at the time it was booked. This value should not change over time and is consistent over installment and line of credit products. This is used to calculate exposure for Line of Credit Products.</description>
    <inlineHelpText>This field is the &quot;Original Amount&quot; of the loan at the time of underwriting. This is different than the &quot;Principal Balance&quot; of the loan, which is the balance of the loan today.</inlineHelpText>
    <label>Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>