force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Application__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is optional. It is automatically populated. This lookup field is used to specify the application record that is associated to the loan and is used as part of the SBA process and Customer Portal.</description>
    <label>Application</label>
    <referenceTo>LLC_BI__Application__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>