force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Authorization_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Authorization_Date__c</fullName>
    <description>This field is optional. It can be used to specify the date an SBA Authorization is received.</description>
    <label>Authorization Date</label>
    <type>Date</type>
</CustomField>