force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Auto_Decision_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Auto_Decision_Status__c</fullName>
    <description>This field is automatically updated via the auto decision process. It stores the result of the auto decision process.</description>
    <label>Auto-Decision Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>