force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Auto_Pay__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Auto_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually set. It is a boolean field. When enabled, it flags that the loan is set up to use an auto-pay system. When disabled, it flags that the loan is not set up to use an auto-pay system. This field is only used for reporting purposes.</description>
    <label>Auto Pay</label>
    <type>Checkbox</type>
</CustomField>