force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Balloon_Payment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Balloon_Payment__c</fullName>
    <description>This field is manually set. It is optional, but should be populated if LLC_BI__Balloon__c is set. This field is used to specify the total amount for the balloon payment.</description>
    <inlineHelpText>The total amount for the balloon payment</inlineHelpText>
    <label>Balloon Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>