force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Billing_Address__c</fullName>
    <description>This field is optional. It is manually set. This field is used to specify the city of the billing address for a loan.</description>
    <label>Billing City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>