force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Billing_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Billing_Zipcode__c</fullName>
    <description>This field is optional. It is manually set. This field is used to specify the ZIP code of the billing address for a loan.</description>
    <label>Billing Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>