force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Booked_Date__c</fullName>
    <description>This field is automatically populated. This field is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</description>
    <inlineHelpText>Booked Date is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration.  This date should not be edited.</inlineHelpText>
    <label>Booked Date</label>
    <type>Date</type>
</CustomField>