force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Branch__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It is manually set. This field is lookup to the branch object, and is used to specify the branch of the financial institution where the loan is held.</description>
    <label>Branch</label>
    <referenceTo>LLC_BI__Branch__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>