force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Call_Report_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Call_Report_Code__c</fullName>
    <description>This field is automatically populated by imports as it comes from the General Ledger. It relates to how the loan portfolio is frequently reported to the board and regulators. This field is not displayed to the user.</description>
    <label>Call Report Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>