force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Class_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Class_Code__c</fullName>
    <description>This field is optional. If in use, it is automatically populated. This field is used to categorize loans by class. It is used for reporting purposes only.</description>
    <inlineHelpText>Used in LaserPro Field Mappings. This field is used to categorize loans by class.</inlineHelpText>
    <label>Class Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>