force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Close_Date_Hard__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Close_Date_Hard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually set. This field is a checkbox used to specify if the loan has a hard close date.</description>
    <label>Closing Date Confirmed</label>
    <type>Checkbox</type>
</CustomField>