force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Close_Month__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Close_Month__c</fullName>
    <description>This field is automatically populated. This formula field is used to specify the month in which the loan is projected to close (the month specified in Projected Closed Date).</description>
    <formula>DATE(VALUE(LEFT(TEXT(LLC_BI__CloseDate__c),4)), VALUE(MID(TEXT(LLC_BI__CloseDate__c),6,2)), 01)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Month</label>
    <type>Date</type>
</CustomField>