force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__Construction_CO_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Construction_CO_Date__c</fullName>
    <description>This field is optional. It is manually populated. It is used to identify the date a Certificate of Occupancy was issued for recently completed construction.</description>
    <label>Construction CO Date</label>
    <type>Date</type>
</CustomField>