force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__CRA_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CRA_Action_Taken__c</fullName>
    <description>This field is optional. It is manually populated. This field indicates the action taken on the loan.</description>
    <inlineHelpText>CRA Action Taken for Loan</inlineHelpText>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Loan Originated</fullName>
            </value>
            <value>
                <fullName>2 - Loan Purchased By Your Institution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>