force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__CRA_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CRA_Affiliate__c</fullName>
    <description>This field is optional. It is manually populated. This field indicates if the action was taken at the institution or an affiliate.</description>
    <inlineHelpText>CRA Affiliate</inlineHelpText>
    <label>Affiliate Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Action taken at this institution</fullName>
            </value>
            <value>
                <fullName>2 - Action taken at an affiliate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>