force-app/main/default/objects/LLC_BI__Loan__c/fields/LLC_BI__CRA_Community_Development_Reportable__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CRA_Community_Development_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be manually selected. When enabled, it indicates that this loan falls under a category that makes it CRA Community Development Reportable. When disabled, the loan does not fall under the CRA Community Development Reportable. By default, the field is disabled.</description>
    <inlineHelpText>CRA Community Development Reportable</inlineHelpText>
    <label>Community Development Reportable</label>
    <type>Checkbox</type>
</CustomField>